adding scaffold for new feedback module

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
         <module>plugins/cache</module>
         <module>plugins/cache-api</module>
         <module>plugins/protannot</module>
+        <module>plugins/feedback</module>
     </modules>
 
     <profiles>
@@ -456,6 +457,11 @@
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>protannot</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.lorainelab</groupId>
+                <artifactId>feedback</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <!--End of plugin module dependencies-->
