runtime changes for java fx

--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -52,7 +52,9 @@ org.osgi.framework.system.packages.extra= \
  com.sun.javadoc, \
  com.sun.org.apache.xml.internal.serialize, \
  oracle.xml.parser, \
- oracle.xml.parser.v2
+ oracle.xml.parser.v2, \
+ javafx.application, \
+ javafx.scene
 
 # The following property makes specified packages from the class path
 # available to all bundles. You should avoid using this property.
