adding required javafx packages to runtime exports

--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -54,7 +54,11 @@ org.osgi.framework.system.packages.extra= \
  oracle.xml.parser, \
  oracle.xml.parser.v2, \
  javafx.application, \
- javafx.scene
+ javafx.scene, \
+ javafx.collections, \
+ javafx.embed.swing, \
+ javafx.scene.layout, \
+ javafx.scene.web
 
 # The following property makes specified packages from the class path
 # available to all bundles. You should avoid using this property.
