--- a/plugins/feedback/src/main/resources/bundle.properties
+++ b/plugins/feedback/src/main/resources/bundle.properties
@@ -1,4 +1,4 @@
 menu.weight = 10
-menu.name = Give feedback
+menu.name = Report a bug or provide feedback
 menu.parent.name = help
 menu.tooltip = Provide feedback to the IGB team
