added additional javafx related exports to the runtime

--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -58,7 +58,15 @@ org.osgi.framework.system.packages.extra= \
  javafx.collections, \
  javafx.embed.swing, \
  javafx.scene.layout, \
- javafx.scene.web
+ javafx.scene.web, \
+ jdk.nashorn.api.scripting, \
+ netscape.javascript, \
+ javafx.beans.value, \
+ javafx.beans.property, \
+ javafx.event, \
+ javafx.scene, \
+ javafx.scene.control, \
+ javafx.stage
 
 # The following property makes specified packages from the class path
 # available to all bundles. You should avoid using this property.
