--- a/plugins/protannot/src/main/resources/protannot.properties
+++ b/plugins/protannot/src/main/resources/protannot.properties
@@ -27,7 +27,7 @@ viewMenu=View
 viewMenuMnemonic=V
 
 # File Menu
-openFile=Open file
+openFile=Open File
 menuRunInterProScan=Run InterProScan
 addServer=Add Server
 serverLoad=Load From Server
