--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -53,20 +53,27 @@ org.osgi.framework.system.packages.extra= \
  com.sun.org.apache.xml.internal.serialize, \
  oracle.xml.parser, \
  oracle.xml.parser.v2, \
- javafx.application, \
- javafx.scene, \
- javafx.collections, \
- javafx.embed.swing, \
- javafx.scene.layout, \
- javafx.scene.web, \
  jdk.nashorn.api.scripting, \
  netscape.javascript, \
+ javafx.application, \
+ javafx.collections, \
+ javafx.embed.swing, \
  javafx.beans.value, \
  javafx.beans.property, \
  javafx.event, \
+ javafx.util, \
+ javafx.geometry, \
+ javafx.stage, \
  javafx.scene, \
  javafx.scene.control, \
- javafx.stage
+ javafx.scene.text, \
+ javafx.scene.paint, \
+ javafx.scene.web, \
+ javafx.scene.layout, \
+ javafx.scene.shape, \
+ javafx.scene.image, \
+ javafx.scene.input
+
 
 # The following property makes specified packages from the class path
 # available to all bundles. You should avoid using this property.
