--- a/plugins/protannot/src/main/resources/protannot.properties
+++ b/plugins/protannot/src/main/resources/protannot.properties
@@ -74,3 +74,4 @@ selectMode=Select Mode
 selectModeToolTip=Use Selection Tool to select one or more items, click-drag axis to zoom in, or click-drag to move left or right.
 scrollModeToolTip=put view in scroll mode
 paxmlFileChooserTitle=Save PAXML File
+invalidEmail=Invalid email address.
