--- a/plugins/protannot/src/main/resources/protannot.properties
+++ b/plugins/protannot/src/main/resources/protannot.properties
@@ -73,3 +73,4 @@ scrollMode=Scroll Mode
 selectMode=Select Mode
 selectModeToolTip=Use Selection Tool to select one or more items, click-drag axis to zoom in, or click-drag to move left or right.
 scrollModeToolTip=put view in scroll mode
+paxmlFileChooserTitle=Save PAXML File
