--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -72,7 +72,8 @@ org.osgi.framework.system.packages.extra= \
  javafx.scene.layout, \
  javafx.scene.shape, \
  javafx.scene.image, \
- javafx.scene.input
+ javafx.scene.input, \
+ javafx.fxml
 
 
 # The following property makes specified packages from the class path
