added additional javafx package export

--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -73,7 +73,8 @@ org.osgi.framework.system.packages.extra= \
  javafx.scene.shape, \
  javafx.scene.image, \
  javafx.scene.input, \
- javafx.fxml
+ javafx.fxml, \
+ javafx.collections.transformation
 
 
 # The following property makes specified packages from the class path
