--- a/plugins/protannot/src/main/resources/protannot.properties
+++ b/plugins/protannot/src/main/resources/protannot.properties
@@ -68,3 +68,8 @@ toggleHairlineTip=Show/Hide Zoom Stipe
 toggleHairlineLabelTip=Show/Hide Zoom Stripe Label
 
 protannotMenu=ProtAnnot
+
+scrollMode=Scroll Mode
+selectMode=Select Mode
+selectModeToolTip=Use Selection Tool to select one or more items, click-drag axis to zoom in, or click-drag to move left or right.
+scrollModeToolTip=put view in scroll mode
