--- a/pom.xml
+++ b/pom.xml
@@ -181,80 +181,80 @@
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>heatmap-editor</artifactId>
-                <version>${project.version}</version>
+               <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>affymetrix-common</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>genometry</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>igb</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>igb-services</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>igbSwingExt</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>window-service</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>igb-preferences</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>weblinks</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>synonym-lookup</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>quickload</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>das</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>das2</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <!--End of core module dependencies-->
@@ -263,205 +263,205 @@
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>apollo-library</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>annotation-tab</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>track-operations-panel</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>bigBedHandler</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>bigWigHandler</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>bookmark</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>externalView</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>graphTab</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>igbScript</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>keyWordSearch</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>ncbiBlast</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>           
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>propertyView</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>restrictionSites</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>searchModelIdOrProps</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>searchView</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>sequenceViewer</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>survey</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>thresholding</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>tutorial</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>update</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>plugins-manager</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>shared-lib-wrapper</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>logging-config</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency> 
                 <groupId>com.lorainelab</groupId>
                 <artifactId>igb-genoviz-extensions</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>paired-data-preprocessor</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>igb-command-socket</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>23andMe-snp-converter</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>console-gui</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>image-exporter</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>session-manager</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>keybinding-registry</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>cache</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>cache-api</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>protannot</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>feedback</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
             </dependency>
             <!--End of plugin module dependencies-->
             
@@ -469,73 +469,73 @@
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>findAnnotations</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency> 
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>geometric-mean</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency> 
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>merge-annotation-operator</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>ncbiPrimer</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency> 
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>overlapAnnotationOperator</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency> 
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>parentOperators</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>sampleSelection</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>searchModeSymetryFilter</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency> 
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>talleyHandler</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency> 
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>transcriptIsoForm</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency> 
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>tutorial-helper</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency> 
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>searchModeLucene</artifactId>
-                <version>${project.version}</version>
+                 <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
             <!-- End of development plugins -->
@@ -923,7 +923,7 @@
                                     <artifactItem>
                                         <groupId>${project.groupId}</groupId>
                                         <artifactId>${project.artifactId}</artifactId>
-                                        <version>${project.version}</version>
+                                         <version>${project.parent.version}</version>
                                     </artifactItem>
                                 </artifactItems>
                                 <outputDirectory>${project.parent.basedir}/bundles</outputDirectory>
