--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <felixMainVersion>5.2.0</felixMainVersion>
         <felix-scr-version>1.8.2</felix-scr-version>
         <felix-http-version>2.3.2</felix-http-version>
-        <felix-configadmin-version>1.8.0</felix-configadmin-version>
+        <felix-configadmin-version>1.8.8</felix-configadmin-version>
         <felix-metatype-version>1.0.10</felix-metatype-version>
         <felix-webconsole-version>4.2.4</felix-webconsole-version>
         <felix-bundlerepository-version>2.0.2</felix-bundlerepository-version>
@@ -645,12 +645,12 @@
             <dependency>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>org.osgi.service.obr</artifactId>
-                <version>${osgiObrServiceVersion}</version>
+                <version>1.0.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>org.apache.felix.bundlerepository</artifactId>
-                <version>${felix-bundlerepository-version}</version>
+                <version>2.0.6</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
@@ -660,7 +660,7 @@
             <dependency>
                 <groupId>org.osgi</groupId>
                 <artifactId>org.osgi.compendium</artifactId>
-                <version>${org.osgi.compendium-version}</version>
+                <version>5.0.0</version>
             </dependency>
             
             <dependency>
