abstract obvs model

--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -60,6 +60,7 @@ org.osgi.framework.system.packages.extra= \
  javafx.embed.swing, \
  javafx.beans.value, \
  javafx.beans.property, \
+ javafx.beans, \
  javafx.event, \
  javafx.util, \
  javafx.geometry, \
