--- a/core/igb/pom.xml
+++ b/core/igb/pom.xml
@@ -152,6 +152,11 @@
             <artifactId>commons-io</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>frameManager</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
