moved FrameVisibilityManager to new module

--- a/core/frameManager/pom.xml
+++ b/core/frameManager/pom.xml
@@ -31,6 +31,11 @@
             <scope>provided</scope>
         </dependency>
         <!--End of logging dependencies-->
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>igb-services</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
