fix for race condition in tab panel whiteboard added

--- a/core/window-service/pom.xml
+++ b/core/window-service/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>frameManager</artifactId> 
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
