--- a/core/frameManager/pom.xml
+++ b/core/frameManager/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>igb-services</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+             <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
