created whiteboard to replace singleton access to fileTypeHolder class, and also to allow new file types to be supported through simple plugins.  Added narrowpeak model to support narrowpeak file format through this newly enabled mechanism.

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -310,6 +310,16 @@
             <artifactId>cache</artifactId>
             <scope>runtime</scope>  
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>feedback</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>narrowpeak</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <!--End of plugin module dependencies--> 
         <dependency> 
             <groupId>com.jidesoft</groupId>
