migrated bed parsing code to a new module

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -320,6 +320,11 @@
             <artifactId>narrowpeak</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>bed</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <!--End of plugin module dependencies--> 
         <dependency> 
             <groupId>com.jidesoft</groupId>
