migrated BAM symloader and filetypehandler to a separate module

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -325,6 +325,11 @@
             <artifactId>bed</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>bam</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <!--End of plugin module dependencies--> 
         <dependency> 
             <groupId>com.jidesoft</groupId>
