--- a/plugins/external-sort/pom.xml
+++ b/plugins/external-sort/pom.xml
@@ -80,6 +80,10 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.15</version>
+            </plugin>
+            <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <configuration>
                     <filesets>
