--- a/plugins/image-exporter/pom.xml
+++ b/plugins/image-exporter/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>igbSwingExt</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>igb</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
