--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
         <module>core/das2</module>
         <module>core/frameManager</module>
         <module>core/synonym-lookup</module>
+        <module>core/igb-javafx-util</module>
         <module>plugins/ApolloLibrary</module>
         <module>plugins/AnnotationTab</module>
         <module>plugins/track-operations-panel</module>
@@ -265,6 +266,12 @@
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>frameManager</artifactId>
+                 <version>${project.parent.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.lorainelab</groupId>
+                <artifactId>igb-javafx-util</artifactId>
                  <version>${project.parent.version}</version>
                 <scope>provided</scope>
             </dependency>
