--- a/plugins/image-exporter/pom.xml
+++ b/plugins/image-exporter/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>igb</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>igb-javafx-util</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
