--- a/core/genometry/pom.xml
+++ b/core/genometry/pom.xml
@@ -22,6 +22,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>external-sort</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>affymetrix-common</artifactId>
             <scope>provided</scope>
