--- a/pom.xml
+++ b/pom.xml
@@ -1022,6 +1022,11 @@
                     </filesets>
                 </configuration>
             </plugin>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.15</version>
+            </plugin>
         </plugins>
     </build>
 
