--- a/core/genometry/pom.xml
+++ b/core/genometry/pom.xml
@@ -137,7 +137,12 @@
     </dependencies>
 
     <build>
+        
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
             </plugin>
