--- a/optionalPlugins/protannot/src/main/resources/protannot.properties
+++ b/optionalPlugins/protannot/src/main/resources/protannot.properties
@@ -75,3 +75,7 @@ selectModeToolTip=Use Selection Tool to select one or more items, click-drag axi
 scrollModeToolTip=put view in scroll mode
 paxmlFileChooserTitle=Save PAXML File
 invalidEmail=Invalid email address.
+scrollLeft=Move left
+scrollRight=Move right
+scrollLeftTooltip=Move left
+scrollRightTooltip=Move right
