--- a/core/weblinks/pom.xml
+++ b/core/weblinks/pom.xml
@@ -134,7 +134,7 @@
                 </configuration>
             </plugin>  
             <plugin>
-                <groupId>org.lorainelab.igb</groupId>
+                <groupId>com.lorainelab</groupId>
                 <artifactId>bundle-markdown-encoder</artifactId>
                 <executions>
                     <execution>
