--- a/optionalPlugins/protannot/pom.xml
+++ b/optionalPlugins/protannot/pom.xml
@@ -198,7 +198,7 @@
                 </configuration>
             </plugin>   
             <plugin>
-                <groupId>com.lorainelab</groupId>
+                <groupId>org.lorainelab</groupId>
                 <artifactId>bundle-markdown-encoder</artifactId>
                 <executions>
                     <execution>
