--- a/core/shared-lib-wrapper/pom.xml
+++ b/core/shared-lib-wrapper/pom.xml
@@ -248,6 +248,96 @@
                                     <artifactId>http-request</artifactId>
                                     <version>6.0</version>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.lorainelab.igb</groupId>
+                                    <artifactId>org.lorainelab.igb.error.reporter.api</artifactId>
+                                    <version>1.0.0</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.gogo.runtime</artifactId>
+                                    <version>0.16.2</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.gogo.shell</artifactId>
+                                    <version>0.12.0</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.gogo.command</artifactId>
+                                    <version>0.16.0</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.shell.remote</artifactId>
+                                    <version>1.1.2</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.dependencymanager</artifactId>
+                                    <version>3.2.0</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.dependencymanager.shell</artifactId>
+                                    <version>3.2.0</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.http.servlet-api</artifactId>
+                                    <version>1.1.2</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.http.jetty</artifactId>
+                                    <version>2.2.2</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.log</artifactId>
+                                    <version>1.0.1</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.osgi</groupId>
+                                    <artifactId>org.osgi.service.remoteserviceadmin</artifactId>
+                                    <version>${org.osgi.service.remoteserviceadmin-version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.lorainelab.igb</groupId>
+                                    <artifactId>org.lorainelab.igb.remote.services.commons</artifactId>
+                                    <version>${org.lorainelab.igb.remote.services-version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.lorainelab.igb</groupId>
+                                    <artifactId>org.lorainelab.igb.remote.services.discovery.provider.configured</artifactId>
+                                    <version>${org.lorainelab.igb.remote.services-version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.lorainelab.igb</groupId>
+                                    <artifactId>org.lorainelab.igb.remote.services.topology.manager</artifactId>
+                                    <version>${org.lorainelab.igb.remote.services-version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.lorainelab.igb</groupId>
+                                    <artifactId>org.lorainelab.igb.remote.services.distribution.provider.http</artifactId>
+                                    <version>${org.lorainelab.igb.remote.services-version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-core</artifactId>
+                                    <version>2.3.5</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-annotations</artifactId>
+                                    <version>2.3.5</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-databind</artifactId>
+                                    <version>2.3.5</version>
+                                </artifactItem>
                                 <!-- End of development only bundles -->                                                                      
                             </artifactItems>
                             <outputDirectory>${project.parent.basedir}/bundles</outputDirectory>
